--- a/dynamicHTML/views/about.hbs
+++ b/dynamicHTML/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/me.png">
+        <p>This site was created by Sarthak. It uses data from <a href="https://www.mapbox.com/">mapbox.com</a> and <a href="https://weatherstack.com/">weatherstack.com</a></p>
     </div>
     
     {{>footer}}
